# 1.01.09 (58349) Nov 4, 2011
Added a message for middle-button press, see #3136
# 1.01.08 (58345) Nov 3, 2011
Fixed threading issue for message sending when bonds created by dragging, see #3136
Changed "bondsRemoved" to "bondsChanged", see #3144
# 1.01.07 (58331) Nov 3, 2011
Added a message for background color change, see #3144
Report on both electron and molecule geometry when they change, see #3136
# 1.01.06 (58278) Nov 2, 2011
Added system response for structure change, see #3136
# 1.01.05 (58221) Nov 1, 2011
# 1.01.04 (58186) Oct 31, 2011
10/31/11 Updated message formatting, see #3136
# 1.01.03 (58151) Oct 31, 2011
Redeploy after changing message output style, see #3136
Added a separate flavor for sim event reporting, see #3136
# 1.01.02 (58068) Oct 27, 2011
# 1.01.01 (58066) Oct 27, 2011
Hide spurious "dragging = false" messages when clicking on piccolo swing buttons
Added simsharing project as a dependency of molecule-shapes for testing, should be removed before any more public deploys of this sim
Added sim sharing events for dragging atoms, electron pairs or rotating the view
Added SimSharingEvents and reporting from creating/destroying bonds and all checkboxes
# 1.01.00 (57968) Oct 24, 2011
# 1.00.04 (57962) Oct 24, 2011
> Fixed: molecule shapes are sometimes incorrect because single, double and triple bonds are treated differently, see #3128
10/24/11 Treat 1-3 bonds equivalently in AttractorModel and MoleculeModel, see #3128
# 1.00.03 (57720) Oct 17, 2011
10/17/11 Error reporting tweak for JME
10/17/2011 Reverted trial fix for rendering problems on 1.5, see #3122
# 1.00.03 (57702) Oct 17, 2011
10/17/2011 Trial fix for rendering problems on 1.5, see #3122
# 1.00.02 (57616) Oct 13, 2011
10/13/11 Changed Basics colors
# 1.00.01 (57533) Oct 12, 2011
10/12/11 Added "Basics" simulation version
Added Molecule Shapes: Basics
# 1.00.00 (57427) Oct 10, 2011
# 0.02.00 (57424) Oct 10, 2011
Removed unused items from data