@@ -40,3 +40,5 @@ control.removeAll=Remove All
 realExamples.title=Real Examples
 
 angle.degrees={0}\u00B0
+angle.greaterThanDegrees=greater than {0}\u00B0
+angle.lessThanDegrees=less than {0}\u00B0
